@@ -494,6 +494,7 @@ Element.Methods = {
   },
 
   cumulativeOffset: function(element) {
+    element = $(element);
     var valueT = 0, valueL = 0;
     do {
       valueT += element.offsetTop  || 0;
@@ -504,6 +505,7 @@ Element.Methods = {
   },
 
   positionedOffset: function(element) {
+    element = $(element);
     var valueT = 0, valueL = 0;
     do {
       valueT += element.offsetTop  || 0;
@@ -561,6 +563,7 @@ Element.Methods = {
   },
 
   cumulativeScrollOffset: function(element) {
+    element = $(element);
     var valueT = 0, valueL = 0;
     do {
       valueT += element.scrollTop  || 0;
@@ -571,6 +574,7 @@ Element.Methods = {
   },
   
   getOffsetParent: function(element) {
+  	element = $(element);
     if (element.offsetParent) return $(element.offsetParent);
     if (element == document.body) return $(element);
     
@@ -582,9 +586,9 @@ Element.Methods = {
   },
 
   viewportOffset: function(forElement) {
-    var valueT = 0, valueL = 0;
+    forElement = $(forElement);
 
-    var element = forElement;
+    var element = forElement, valueT = 0, valueL = 0;
     do {
       valueT += element.offsetTop  || 0;
       valueL += element.offsetLeft || 0;
@@ -607,6 +611,7 @@ Element.Methods = {
   },
 
   clonePosition: function(element, source) {
+    element = $(element);
     var options = Object.extend({
       setLeft:    true,
       setTop:     true,
@@ -621,7 +626,6 @@ Element.Methods = {
     var p = source.viewportOffset();
 
     // find coordinate system to use
-    element = $(element);
     var delta = [0, 0];
     var parent = null;
     // delta [0,0] will do fine with position: fixed elements, 
@@ -700,7 +704,7 @@ if (Prototype.Browser.Opera) {
   
   Element.Methods.readAttribute = Element.Methods.readAttribute.wrap(
     function(proceed, element, attribute) {
-      if (attribute === 'title') return element.title;
+      if (attribute === 'title') return $(element).title;
       return proceed(element, attribute);
     }
   );  
@@ -904,6 +908,7 @@ else if (Prototype.Browser.WebKit) {
   // positioned.  For performance reasons, redefine Element#cumulativeOffset for
   // KHTML/WebKit only.
   Element.Methods.cumulativeOffset = function(element) {
+    element = $(element);
     var valueT = 0, valueL = 0;
     do {
       valueT += element.offsetTop  || 0;
